ブランチ切り替え

--- a/app/views/parents/show.html.erb
+++ b/app/views/parents/show.html.erb
@@ -1,19 +1,16 @@
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-  
+    <style>
+        table{width:100%;border:1px solid #000000;border-collapse: collapse;background-color:lavender;}
+        td{border:1px solid #000000;}
+        .ph1{border: dotted 2px blue;}
+    </style>
+
+
 <ul id="sortable_list">
   <% @children.each do |child| %>
     <li><%= child.name %></li>
   <% end %>
 </ul>
 <%= hidden_field_tag :parent_id, @parent.id %>
-
-<h1>Ajax#index</h1>
-<p id="hoge">赤色になるよ</p>
-
-<script>
-  $("#hoge").css("color","red")
-</script>
 
 <body>
     <style>
